--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -12,6 +12,7 @@ nav class="bg-white shadow-sm" data-controller="dropdown"
 
         div class="hidden sm:ml-6 space-x-8 sm:flex"
           = link_to("Dashboard", root_path, :class => "inline-flex items-center px-1 pt-1 border-green-500 text-sm font-medium leading-5 text-gray-900 focus:outline-none focus:border-green-700 transition duration-150 ease-in-out")
+          = link_to("Leads", leads_path, :class => "inline-flex items-center px-1 pt-1 border-green-500 text-sm font-medium leading-5 text-gray-900 focus:outline-none focus:border-green-700 transition duration-150 ease-in-out")
           = link_to("Agreements", agreements_path, :class => "inline-flex items-center px-1 pt-1 border-green-500 text-sm font-medium leading-5 text-gray-900 focus:outline-none focus:border-green-700 transition duration-150 ease-in-out")
           = link_to("Customers", customers_path, :class => "inline-flex items-center px-1 pt-1 border-green-500 text-sm font-medium leading-5 text-gray-900 focus:outline-none focus:border-green-700 transition duration-150 ease-in-out")
           = link_to("Services", services_path, :class => "inline-flex items-center px-1 pt-1 border-green-500 text-sm font-medium leading-5 text-gray-900 focus:outline-none focus:border-green-700 transition duration-150 ease-in-out")
