--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,8 +10,8 @@ html lang="#{I18n.locale}"
     = action_cable_meta_tag
     = csrf_meta_tags
 
-    = stylesheet_pack_tag "styles/application"
-    = javascript_pack_tag "scripts/application"
+    / = stylesheet_tag "styles/application"
+    / = javascript_tag "scripts/application"
 
   body
     .min-h-screen.bg-gray-100
