--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,7 +10,7 @@ html lang="#{I18n.locale}"
     = action_cable_meta_tag
     = csrf_meta_tags
 
-    / = stylesheet_tag "styles/application"
+    = stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload"
     / = javascript_tag "scripts/application"
 
   body
