--- a/app/views/agreements/_form.html.slim
+++ b/app/views/agreements/_form.html.slim
@@ -3,6 +3,7 @@
   = render(Form::InputGroup::SelectComponent.new(:form => form, :attribute => :service_id, :collection => Service.order(:name), :text_method => :name, :value_method => :id))
   = render(Form::InputGroup::Component.new(:form => form, :attribute => :project_name))
   = render(Form::InputGroup::Component.new(:form => form, :attribute => :price))
+  = render(Form::InputGroup::Component.new(:form => form, :attribute => :discount_percentage))
   = render(Form::UnitSelectorComponent.new(:form => form, :attribute => :unit))
   = render(Form::InputGroup::DateComponent.new(:form => form, :attribute => :ends_on))
   = render(Form::InputGroup::SelectComponent.new(:form => form, :attribute => :state, :collection => Agreement::STATES))
