--- a/app/views/agreements/_form.html.slim
+++ b/app/views/agreements/_form.html.slim
@@ -9,10 +9,10 @@
   = render(Form::InputGroup::SelectComponent.new(:form => form, :attribute => :state, :collection => Agreement::STATES))
   = render(Form::InputGroup::Component.new(:form => form, :attribute => :purchase_order_number))
 
-  div class="mt-8 border-t border-gray-200 pt-5"
+  div class="pt-5 mt-8 border-t border-gray-200"
     div class="flex justify-end"
-      span class="ml-3 inline-flex rounded-md shadow-sm"
+      span class="inline-flex ml-3 rounded-md shadow-sm"
         = link_to "Cancel", agreements_path, :class => "py-2 px-4 border border-gray-300 rounded-md text-sm leading-5 font-medium text-gray-700 hover:text-gray-500 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:bg-gray-50 active:text-gray-800 transition duration-150 ease-in-out"
 
-      span class="ml-3 inline-flex rounded-md shadow-sm"
+      span class="inline-flex ml-3 rounded-md shadow-sm"
         = form.submit "Save", :class => "inline-flex justify-center py-2 px-4 border border-transparent text-sm leading-5 font-medium rounded-md text-white bg-green-600 hover:bg-green-500 focus:outline-none focus:border-green-700 focus:shadow-outline-green active:bg-green-700 transition duration-150 ease-in-out"
